# iurc-manager

./: manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_user_phone_user_isu_alter_user_role.py
accounts/static/css/: styles.css
accounts/templates/accounts/: base.html  dashboard.html  register.html
row_manager/: asgi.py  settings.py  urls.py  wsgi.py
templates/accounts/: dashboard.html  login.html  register.html
templates/admin/: base_site.html  database_manager.html  index.html
