[project]
name = "row-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "marialukashenko",email = "109748752+marialukashenko@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry.dependencies]
python = ">=3.9"
sqlalchemy = "*"
django = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
